title/svg basics

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
+    <title>ic-06</title>
+
+    <h2>Javascript Part 2</h2>
+
+    <svg height="500" width="500">
+        <line x1="50" y1="400" x2="450" y2="400"/>
+        
+    </svg>
 
 
 </body>
