--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
         </div>
 
         <svg id="frame">
-            <line x1="50" y1="400" x2="450" y2="400" id="svgLine" class="svgLine"/>
-            <circle cx="450" cy="50" r="40" id="svgCirc" class="red"/>
+            <line x1="50" y1="400" x2="450" y2="400" stroke="rgb(0,0,139)" stroke-width="50" id="svgLine"/>
+            <circle cx="450" cy="50" r="40" fill="red" id="svgCirc"/>
         </svg>
 
     </div>
         
     <script src="main.js"></script>
+
+    <h3>Acknowledgements</h3>
+    <ul>
+        <li><a href="https://dbchung3.medium.com/add-event-listener-dom-event-types-6c10a844c9d8">List of Events</a></li>
+    </ul>
 </body>
 
 </html>
